llvm-toolchain-3.6 (1:3.6.2-2) UNRELEASED; urgency=medium

  * Team upload
  [ Luciano Bello ]
  * debian/patches/CVE-2015-2305.patch
    (Closes: #778393)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 17 Aug 2015 15:22:56 +0200

llvm-toolchain-3.6 (1:3.6.2-1) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * New upstream release
  * Upload in unstable
  * Add a workaround to build against g++ 5.2 (which does not provide
    the binary g++-5.2)
  * Transition to gcc 5. Thanks to Matthias Klose for the patch.
    For this, we had to rename libllvm3.6 to libllvm3.6v5
    (Closes: #793899)
  * bug-24472.diff: Silent some aarch64/arm64 tests which started to fail
    probably during the gcc 5 migration

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 17 Aug 2015 11:23:35 +0200

llvm-toolchain-3.6 (1:3.6.2~+rc1-1~exp1) experimental; urgency=medium

  * Preparation of the new stable release
  * Disable the patch force-gcc-header-obj.diff. Seems to cause bug #23556

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 24 Jun 2015 02:54:16 +0200

llvm-toolchain-3.6 (1:3.6.1-1) unstable; urgency=medium

  * New upstream release
  * Fix the CMake build. thanks to Paweł Bylica for the fix.
    Fix upstream bug #23352

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 20 May 2015 08:56:00 +0200

llvm-toolchain-3.6 (1:3.6~+rc1-1~exp1) experimental; urgency=medium

  * Preparation for the 3.6.1 release
  * Force the version of clang in the analyzer scripts
    clang-analyzer-force-version.diff
  * Update of the Vcs-* flags
  * remove lldb-arch.diff (merged upstream)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 19 May 2015 12:05:18 +0200

llvm-toolchain-3.6 (1:3.6-2) unstable; urgency=medium

  * lldb-arch.diff: Fix a critical bug on lldb arch detection
    (Closes: #778562)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 27 Feb 2015 11:41:25 +0100

llvm-toolchain-3.6 (1:3.6-1) unstable; urgency=medium

  * New upstream release
