@@ -1,8 +1,8 @@
-Document: libllvm-@LLVM_VERSION@-ocaml-dev-ocamldoc-api-reference
-Title: Llvm OCamldoc API Reference
-Abstract: API reference manual for libllvm-ocaml-dev (generated via OCamldoc)
-Section: Programming/OCaml
-
-Format: HTML
-Index: /usr/share/doc/libllvm-@LLVM_VERSION@-ocaml-dev/html/index.html
-Files: /usr/share/doc/libllvm-@LLVM_VERSION@-ocaml-dev/html/*
+#Document: libllvm-@LLVM_VERSION@-ocaml-dev-ocamldoc-api-reference
+#Title: Llvm OCamldoc API Reference
+#Abstract: API reference manual for libllvm-ocaml-dev (generated via OCamldoc)
+#Section: Programming/OCaml
+#
+#Format: HTML
+#Index: /usr/share/doc/libllvm-@LLVM_VERSION@-ocaml-dev/html/index.html
+#Files: /usr/share/doc/libllvm-@LLVM_VERSION@-ocaml-dev/html/*
